prevent horizontal scroll - hard fix

--- a/sass/forum.sass
+++ b/sass/forum.sass
@@ -439,12 +439,19 @@ ul.navitext li
     background-color: white
     border-radius: 2px
 
+html
+  min-width: 320px
+  max-width: 100vw
+  overflow-x: hidden
+
 .stock_forum
   background-color: #2d2d2d
   font-family: 'Open Sans', Verdana, sans-serif
   display: block
   height: 100%
-  min-width: 400px
+  min-width: 320px
+  max-width: 100vw
+  overflow-x: hidden
   a
     text-decoration: none
     color: #77b3ff
